Fix spacing in Issue component Fix publication select

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -24,6 +24,14 @@ a {
   &.nav-link.active {
     color: black !important;
   }
+
+  &.btn {
+    color: white !important;
+
+    &.disabled {
+      cursor: not-allowed !important;
+    }
+  }
 }
 
 .dropdown ul li a {
